@@ -18,6 +18,8 @@ Changes in version 1.018
 
 - Added ghash_remove function.
 
+- Added ghashiter functions, for iteration over ghash tables.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
